# bh_sensing_analysis

./: .gitignore  README.md  demo.sh  pyproject.toml  requirements.txt  run.sh
.streamlit/: config.toml
app/: dashboard.py
bh_score/: bands.py
bh_score/ingest/: cube.py  scanner.py  types.py
bh_score/persist/: queries.py  repository.py  schema.sql
bh_score/scoring/: agreement.py  ai.py  base.py  cascade.py  conditional.py  grades.py  kernel.py  result.py
bh_score/segment/: meatsegnet.py
bh_score/viz/: charts.py  overlay.py  palette.py
cli/: run_pipeline.py
docs/plan/: DEMO_SCRIPT.md  DESIGN_SPEC.md  FEATURES_SPEC.md  PLAN.md  REVIEW_NOTES.md  SCORING_SPEC.md  SOURCE_ANALYSIS.md
docs/preset/BH_(2.0)_Logos/: BH_(2.0)_Primary.ai  BH_(2.0)_Symbol.ai
docs/preset/images/research_images/: IMAGE_CREDITS.md
docs/preset/research/: 00-index.md  01-company-overview.md  02-founders-and-team.md  03-product-grillx.md  04-technology.md  05-business-model-and-market.md  06-funding-and-investors.md  07-customers-partnerships-press.md
docs/submit/: format  submission.md
docs/submit/presentation/: index.html
docs/user_guide/: README.md
docs/work_log/: 2026-06-18_implement-roi-comparison-dashboard.md
tests/: test_agreement_guard.py  test_cascade_golden.py  test_kernel_golden.py  test_stream_a.py  test_stream_b.py  test_stream_c.py  test_stream_d.py  test_symmetry.py
